# deskflow

./: CMakeLists.txt
src/cmd/synergyc/: CMakeLists.txt
src/cmd/synergyd/: CMakeLists.txt
src/cmd/synergyp/: CMakeLists.txt
src/cmd/synergys/: CMakeLists.txt
src/cmd/syntool/: CMakeLists.txt
src/lib/arch/: Arch.cpp  IArchString.cpp  IArchString.h  multibyte.h
src/lib/arch/win32/: ArchInternetWindows.cpp  ArchMiscWindows.cpp  XArchWindows.cpp  XArchWindows.h
src/lib/common/: basic_types.h
src/lib/platform/: MSWindowsClipboardBitmapConverter.cpp  MSWindowsHook.cpp  MSWindowsKeyState.cpp
src/lib/plugin/ns/: CMakeLists.txt
src/lib/plugin/winmmjoy/: CMakeLists.txt
src/lib/synwinhk/: CMakeLists.txt
src/test/integtests/: CMakeLists.txt
src/test/unittests/: CMakeLists.txt
